--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -10,7 +10,7 @@
 }
 
 window#waybar {
-    background-color: #1e222a;
+    background-color: rgba(30, 34, 42, 0.9);
     /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
     transition-property: background-color;
     transition-duration: .5s;
