Change style for temperature in waybar config.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -136,9 +136,11 @@ window#waybar.chromium {
 }
 
 #temperature {
+    color: #5faeef;
 }
 
 #temperature.critical {
+    color: #bf616a; 
 }
 /**/
 
