--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -10,7 +10,7 @@
 }
 
 window#waybar {
-    background-color: rgba(30, 34, 42, 0.9);
+    background-color: rgba(40, 42, 54, 0.9);
     /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
     transition-property: background-color;
     transition-duration: .5s;
@@ -109,15 +109,15 @@ window#waybar.chromium {
 }
 
 #memory {
-    color: #d19a66; 
+    color: #ffb86c; 
 }
 
 #cpu {
-    color: #5faeef;
+    color: #bd93f9;
 }
 
 #network {
-    color: #a3be8c; 
+    color: #50fa7b; 
 }
 
 #network.disconnected {
@@ -131,11 +131,11 @@ window#waybar.chromium {
 }
 
 #custom-bitcoin-price {
-    color: #d19a66; 
+    color: #ffb86c; 
 }
 
 #custom-gpu {
-    color: #a3be8c; 
+    color: #50fa7b; 
 }
 
 #temperature {
