--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,45 +1,38 @@
 window {
-    margin: 5px;
-    background-color: #1e222a;
-    color: #adb1b9;
-    border: 2px solid #2c3038;
+margin: 0px;
+border: 1px solid #bd93f9;
+background-color: #282a36;
 }
-
 #input {
-    padding: 10px;
-    background: none;
-    border: none;
-    color: #adb1b9;
-}
-
-#entry {
-    border: none;
-    padding: 10px;
-}
-
-#entry:selected {
-    border: none;
-    background-color: #2c3038;
-} 
-
-#text {
-    padding: 5px;
-} 
-
-#text:selected {
-    color: #adb1b9;
+margin: 5px;
+border: none;
+color: #f8f8f2;
+background-color: #44475a;
 }
 
 #inner-box {
-    border: none;
+margin: 5px;
+border: none;
+background-color: #282a36;
 }
 
 #outer-box {
-}
-
-#outer-box:selected {
+margin: 5px;
+border: none;
+background-color: #282a36;
 }
 
 #scroll {
+margin: 0px;
+border: none;
 }
 
+#text {
+margin: 5px;
+border: none;
+color: #f8f8f2;
+} 
+
+#entry:selected {
+background-color: #44475a;
+}
