--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -21,11 +21,15 @@ window#waybar {
 
 #workspaces {
   border-radius: 15px;
-  padding: 0 5px;
 }
 
 #workspaces button {
     color: @overlay2;
+    margin-right: 8px;
+}
+
+#workspaces button:last-child {
+  margin-right: 0;
 }
 
 #workspaces button:hover {
@@ -113,6 +117,10 @@ window#waybar {
 
 #temperature.critical {
     color: @red; 
+}
+
+#language {
+  min-width: 16px;
 }
 
 #tray > .passive {
