--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -95,6 +95,31 @@ window#waybar {
     color: @text;
 }
 
+#temperature {
+    color: @blue;
+}
+
+#temperature.critical {
+    color: @red; 
+}
+
+#battery.critical {
+  animation: battery-low 3s infinite;
+}
+
+#language {
+  min-width: 16px;
+}
+
+#tray > .passive {
+    -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+    -gtk-icon-effect: highlight;
+    background-color: #eb4d4b;
+}
+
 #custom-bitcoin-price {
     color: @peach; 
 }
@@ -117,23 +142,17 @@ window#waybar {
   font-size: 13px;
 }
 
-#temperature {
-    color: @blue;
-}
-
-#temperature.critical {
-    color: @red; 
-}
-
-#language {
-  min-width: 16px;
-}
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+@keyframes battery-low {
+  0% {
+    background: @red;
+    color: @base;
+  } 
+  50% {
+    background: @surface1;
+    color: @text;
+  }
+  100% {
+    background: @red;
+    color: @base;
+  }
 }
