--- a/.config/waybar/themes/macchiato.css
+++ b/.config/waybar/themes/macchiato.css
@@ -11,3 +11,6 @@
 @define-color red #ed8796;
 @define-color lavender #b7bdf8;
 @define-color sky #91d7e3;
+@define-color pink #f5bde6;
+@define-color rosewater #f4dbd6;
+@define-color flamingo #f0c6c6;
