--- a/.config/waybar/themes/latte.css
+++ b/.config/waybar/themes/latte.css
@@ -1,6 +1,6 @@
 @define-color base #eff1f5;
-@define-color surface0 #ccd0da;
-@define-color surface1 #bcc0cc;
+@define-color surface0 #dce0e8; /* crust color */
+@define-color surface1 #ccd0da; /* surface0 color */
 @define-color overlay2 #7c7f93;
 @define-color text #4c4f69;
 @define-color yellow #df8e1d;
@@ -11,3 +11,6 @@
 @define-color red #d20f39;
 @define-color lavender #7287fd;
 @define-color sky #04a5e5;
+@define-color pink #ea76cb;
+@define-color rosewater #dc8a78;
+@define-color flamingo #dd7878;
